--- a/playbooks/tasks/snow_attach_store_diagnostic_report/vmanage.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/vmanage.yml
@@ -1,5 +1,5 @@
 ---
-- name: vManage | Fetch SD-WAN details
+- name: vManage | Fetch diagnostic data
   block:
     - name: vManage | Fetch authentication cookie
       ansible.builtin.uri:
@@ -77,7 +77,6 @@
       until: jobs.finished
       retries: 30
       delay: 1
-      ignore_errors: true
       loop: "{{ [rkat1_hub_1_sessions_job, rkat1_hub_2_sessions_job, asbc1_hub_1_sessions_job] }}"
       loop_control:
         loop_var: job
@@ -166,3 +165,4 @@
       register: tloc_stats
   ignore_errors: true
   when: sdwan_store | default("")
+  tags: vmanage
