--- a/playbooks/test_corp_partner connections.yml
+++ b/playbooks/test_corp_partner connections.yml
@@ -1,41 +1,75 @@
 ---
-# - name: Get Subnet Host Range
-#   ansible.builtin.command: /usr/bin/python3
-#   args:
-#     stdin: |
-#       from ipaddress import ip_network
-#       subnet = ip_network("{{ store_subnet }}/{{ store_subnet_mask }}")
-#       first_ip_split = str(subnet[1]).split(".")
-#       last_ip_split = str(subnet[-2]).split(".")
-#       iteration = 1
-#       subnet_host_range_regex = ""
-#       for ip1, ip2 in zip(first_ip_split, last_ip_split):
-#           if ip1 == ip2:
-#               subnet_host_range_regex += f"{ip1}"
-#           else:
-#               subnet_host_range_regex += f"[{ip1}-{ip2}]"
-#           if iteration < 4:
-#               subnet_host_range_regex += "."
-#           iteration += 1
-#       print(subnet_host_range_regex)
-#   register: subnet_host_range_regex
+- name: Validate Partner Connections
+  hosts: localhost
+  gather_facts: false
+  roles:
+    - role: Output
 
-# - name: Set Fact
-#   ansible.builtin.set_fact:
-#     subnet_host_range_regex: "{{ subnet_host_range_regex.stdout }}"
+  tasks:
+    block:
+      - name: Create panos-cli configuration file
+        ansible.builtin.copy:
+          dest: /home/runner/.panos-cli.yml
+          content: |
+            apikey: "{{ panw_api_token }}"
+            user: "{{ panw_user }}"
+            password: "{{ panw_password }}"
+        no_log: true
+        when: "'/home/runner/.panos-cli.yml' is not file"
 
-- name: Corp Partner Connections
-  ansible.builtin.shell: "{{ playbook_dir }}/library/go/panos-cli firewall run commands --no-config --insecure --expect-timeout 60 --user {{ panos_user }} --password {{ panos_ssh_pass }} --command 'show session all filter state active destination {{ service.ip }} count yes' {{ firewalls.sast1_corp_edge }} {{ firewalls.asbc1_corp_edge }} {{ firewalls.rkat1_corp_edge }} | egrep 'fw0|^Number'"
-  register: results
-  changed_when: false
-  delegate_to: localhost
-  loop: "{{ store_connections }}"
-  loop_control:
-    loop_var: service
+      - name: Fetch Ashburn active partner connections
+        ansible.builtin.shell: "{{ playbook_dir }}/library/go/panos-cli firewall run commands --no-config --insecure --expect-timeout 60 --user {{ panos_user }} --password {{ panos_ssh_pass }} --command 'show session all filter state active destination {{ partner.ip }} count yes' {{ firewalls.asbc1_corp_edge }} | egrep '\\*{3} show|ACTIVE'"
+        register: active_partner_sessions_ashburn_job
+        changed_when: false
+        delegate_to: localhost
+        loop: "{{ partner_connections }}"
+        loop_control:
+          loop_var: partner
+        async: 60
+        poll: 0
+
+      - name: Fetch Rocklin active partner connections
+        ansible.builtin.shell: "{{ playbook_dir }}/library/go/panos-cli firewall run commands --no-config --insecure --expect-timeout 60 --user {{ panos_user }} --password {{ panos_ssh_pass }} --command 'show session all filter state active destination {{ partner.ip }} count yes' {{ firewalls.rkat1_corp_edge }} | egrep '\\*{3} show|ACTIVE'"
+        register: active_partner_sessions_rocklin_job
+        changed_when: false
+        delegate_to: localhost
+        loop: "{{ partner_connections }}"
+        loop_control:
+          loop_var: partner
+        async: 60
+        poll: 0
+
+      - name: Fetch Sacramento active partner connections
+        ansible.builtin.shell: "{{ playbook_dir }}/library/go/panos-cli firewall run commands --no-config --insecure --expect-timeout 60 --user {{ panos_user }} --password {{ panos_ssh_pass }} --command 'show session all filter state active destination {{ partner.ip }} count yes' {{ firewalls.sast1_corp_edge }} | egrep '\\*{3} show|ACTIVE'"
+        register: active_partner_sessions_sacramento_job
+        changed_when: false
+        delegate_to: localhost
+        loop: "{{ partner_connections }}"
+        loop_control:
+          loop_var: partner
+        async: 60
+        poll: 0
+
+      - name: Wait for async jobs to finish
+        ansible.builtin.async_status:
+          jid: "{{ job.ansible_job_id }}"
+        register: jobs
+        until: jobs.finished
+        retries: 60
+        delay: 1
+        loop: "{{ [active_partner_sessions_ashburn_job, active_partner_sessions_rocklin_job, active_partner_sessions_sacramento_job] }}"
+        loop_control:
+          loop_var: job
+
+      - name: Set parnter session facts
+        ansible.builtin.set_fact:
+          active_partner_sessions_ashburn: "{{ jobs.results[0] }}"
+          active_partner_sessions_rocklin: "{{ jobs.results[1] }}"
+          active_partner_sessions_sacramento: "{{ jobs.results[2] }}"
+    ignore_errors: true
 
 
-
-##### Store Access to External Services ##############################
+##### External Partner Services ##############################
 
 {% for item in results.results %}
 {{ item.service.name }} {{ item.service.fqdn }} ({{ item.service.ip }}) active firewall sessions:
